Comments from Sam

--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -215,9 +215,7 @@
    "source": [
     "## Probabilistic Error Amplification (PEA)\n",
     "\n",
-    "[PEA](https://www.nature.com/articles/s41586-023-06096-3) is a noise amplification technique used with [Zero-noise extrapolation (ZNE)](#zne) where the noise is amplified using knowledge of a [sparse Pauli-Lindblad noise model](https://www.nature.com/articles/s41567-023-02042-2), which needs to be learned by running additional circuits. Assuming that the \"target\" circuit of interest suffers noise of strength $\\alpha$, ZNE requires implementing many copies of the target circuit, each one suffering from noise whose strength is artificially amplified to values higher than $\\alpha$. Finally, the mitigated results are estimated by fitting the noisy data and extrapolating the value at noise strength $(\\alpha = 0)$. \n",
-    "\n",
-    "One of the main challenges in ZNE is to accurately amplify the noise affecting the target circuit. Many techniques, such as \"gate folding\" (see [Digital zero noise extrapolation for quantum error mitigation](https://arxiv.org/abs/2005.10921)) provide easy ways to perform this amplification, but are potentially inaccurate and might lead to incorrect results.  See the article [\"Scalable error mitigation for noisy quantum circuits produces competitive expectation values\"](https://www.nature.com/articles/s41567-022-01914-3), and specifically page 4 of the [supplementary material](https://arxiv.org/pdf/2108.09197) for details. \n",
+    "One of the main challenges in ZNE is to accurately amplify the noise affecting the target circuit. Gate folding provides an easy way to perform this amplification, but is potentially inaccurate and might lead to incorrect results.  See the article [\"Scalable error mitigation for noisy quantum circuits produces competitive expectation values\"](https://www.nature.com/articles/s41567-022-01914-3), and specifically page 4 of the [supplementary material](https://arxiv.org/pdf/2108.09197) for details. \n",
     "\n",
     "PEA is a more sophisticated technique that performs preliminary experiments to reconstruct the noise and then uses this information to perform an accurate amplification. For utility-scale experiments, it is often the best choice.\n",
     "\n",
@@ -294,48 +292,6 @@
     "estimator.options.resilience.zne.amplifier = \"pea\"\n",
     "estimator.options.resilience.layer_noise_model = noise_data\n",
     "estimator_job = estimator.run(pubs, precision=0.01)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68268837",
-   "metadata": {},
-   "source": [
-    "<Admonition type=\"note\"> \n",
-    "`EstimatorV2.run` invokes noise learning each time it is called.  Therefore, to ensure that you are using a consistent noise model, it is important to only call `run()` once. \n",
-    "</Admonition>\n",
-    "\n",
-    "Example where noise learning is run twice: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "030e88ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est_jobs = []\n",
-    "for pub in (pub_1, pub_2):\n",
-    "    est_jobs.append(est.run([pub]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "721b2fae",
-   "metadata": {},
-   "source": [
-    "Example where noise learning is run once:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27763949",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est_jobs = est.run((pub_1, pub_2))"
    ]
   },
   {
