update link name

--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -48,7 +48,7 @@ The short answer is, _not all of it_. The Qiskit Runtime service software that h
 
 
 ## Qiskit Serverless
-Creating utility-scale quantum applications generally requires a variety of compute resource requirements. Premium users can use Qiskit Serverless (package name `qiskit-serverless`) to easily submit quantum workflows for remote, managed execution. See more information [here](./qiskit-serverless) about how to use this collection of tools.
+Creating utility-scale quantum applications generally requires a variety of compute resource requirements. Premium users can use Qiskit Serverless (package name `qiskit-serverless`) to easily submit quantum workflows for remote, managed execution. See more information [here](./serverless) about how to use this collection of tools.
 
 
 ## Qiskit Transpiler as a Service
