add in next steps

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -234,12 +234,17 @@
    "id": "f8940b98-33f7-4029-ac77-60058c4aee78",
    "metadata": {},
    "source": [
-    "The next section demonstrates how to pass inputs and run this program remotely."
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"info\" title=\"Recommendations\">\n",
+    "\n",
+    "- Learn how to pass inputs and run your program remotely in the [Run your first Serverless workload remotely](./serverless-run-first-workload) topic.\n",
+    "\n",
+    "</Admonition>"
    ]
   }
  ],
  "metadata": {
-  "title": "Write your first Qiskit Serverless program",
   "description": "How to create a parallel transpilation program and deploy it to IBM Quantum Platform to use as a reusable remote service.",
   "kernelspec": {
    "display_name": "Python 3",
@@ -257,7 +262,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Write your first Qiskit Serverless program"
  },
  "nbformat": 4,
  "nbformat_minor": 2
