--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -30,3 +30,11 @@ pip install qiskit-serverless
 ```
 
 This package requires `python` 3.11+. For users and organizations who want to run Serverless on custom infrastructure, follow the [deploy Qiskit Serverless on custom cloud resources guide](https://qiskit.github.io/qiskit-serverless/cloud.html).
+
+## Next steps
+
+<Admonition type="info" title="Recommendations">
+
+Explore how to [write your first Qiskit Serverless program](./serverless-first-program).
+
+</Admonition>
