V1 is no longer supported (#1809)
closes #1802

--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "### Step 3. Execute using the quantum primitives\n",
     "\n",
-    "Quantum computers can produce random results, so you usually collect a sample of the outputs by running the circuit many times. You can estimate the value of the observable by using the `Estimator` class. `Estimator` is one of two [primitives](./get-started-with-primitives); the other is `Sampler`, which can be used to get data from a quantum computer.  These objects possess a `run()` method that executes the selection of circuits, observables, and parameters (if applicable), using what's known as a [primitive unified bloc (PUB).](./primitives#sampler-v2)"
+    "Quantum computers can produce random results, so you usually collect a sample of the outputs by running the circuit many times. You can estimate the value of the observable by using the `Estimator` class. `Estimator` is one of two [primitives](./get-started-with-primitives); the other is `Sampler`, which can be used to get data from a quantum computer.  These objects possess a `run()` method that executes the selection of circuits, observables, and parameters (if applicable), using a [primitive unified bloc (PUB).](primitives#sampler)"
    ]
   },
   {
@@ -620,9 +620,8 @@
     "\n",
     "# data\n",
     "data = list(range(1, len(operators)+1)) # Distance between the Z operators\n",
-    "result = job.result()[0] # Use for EstimatorV2.\n",
-    "values = result.data.evs # Expectation value at each Z operator. Use for Estimator V2.\n",
-    "# values = job.result().values # Use for EstimatorV1\n",
+    "result = job.result()[0]\n",
+    "values = result.data.evs # Expectation value at each Z operator.\n",
     "values = [v / values[0] for v in values] # Normalize the expectation values to evaluate how they decay with distance.\n",
     "\n",
     "# plotting graph\n",
