--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -427,9 +427,9 @@
     }
    ],
    "source": [
-    "from qiskit.primitives import StatevectorSampler\n",
+    "from qiskit.primitives import Sampler\n",
     "\n",
-    "result = StatevectorSampler().run(circuit).result()\n",
+    "result = Sampler().run(circuit).result()\n",
     "result.quasi_dists[0]"
    ]
   },
