--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -221,7 +221,7 @@
     "\n",
     "Because PEA is a ZNE noise amplification technique, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other `resilience.zne` options can be used in addition to set extrapolators, amplification levels, and so on. PEA requires a noise model, which is automatically generated when using primitives.\n",
     "\n",
-    "The following snippet provides an example where PEA is used to mitigate the result of an Estimator job:"
+    "The following snippet shows how to initialize options in such a way that PEA is used to mitigate the result of an Estimator job:"
    ]
   },
   {
