--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -233,9 +233,7 @@
    "source": [
     "estimator = Estimator(mode=backend)\n",
     "estimator.options.resilience.zne_mitigation = True\n",
-    "estimator.options.resilience.zne.amplifier = \"pea\"\n",
-    "\n",
-    "estimator.run(pubs, precision=0.01)"
+    "estimator.options.resilience.zne.amplifier = \"pea\""
    ]
   },
   {
