--- a/docs/migration-guides/qiskit-opflow-module.mdx
+++ b/docs/migration-guides/qiskit-opflow-module.mdx
@@ -7,6 +7,14 @@ description: How to update your code to stop using the deprecated `qiskit.opflow
 
 # Opflow migration guide
 
+<Admonition type="caution">
+  **Deprecation Notice**
+
+  This guide precedes the introduction of the V2 primitives interface. Following the introduction of the V2 primitives, some providers have deprecated V1 primitive
+  implementations in favor of the V2 alternatives. If you are interested in following this guide, we recommend combining it with the
+  [migrate to V2 primitives](./v2-primitives) guide to bring your code to the most updated state.
+</Admonition>
+
 The new [`qiskit.primitives`](/api/qiskit/primitives), in combination with the [`qiskit.quantum_info`](/api/qiskit/quantum_info) module, have superseded
 functionality of [`qiskit.opflow`](/api/qiskit/0.46/opflow), which is being deprecated.
 
