--- a/docs/migration-guides/qiskit-quantum-instance.mdx
+++ b/docs/migration-guides/qiskit-quantum-instance.mdx
@@ -11,7 +11,7 @@ description: Stop using the deprecated Qiskit `QuantumInstance` class
   This guide precedes the introduction of the V2 primitives interface. It was created to guide users from `QuantumInstance` to
   the V1 primitives interface. Following the introduction of the V2 primitives, some providers have deprecated V1 primitive
   implementations in favor of the V2 alternatives. If you are interested in following this guide, we recommend combining it with the
-  [migrate to V2 primitives] guide to bring your code to the most updated state.
+  [migrate to V2 primitives](./v2-primitives) guide to bring your code to the most updated state.
 </Admonition>
 
 The [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance) is a utility class that allows the joint
