--- a/docs/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/migration-guides/qiskit-algorithms-module.mdx
@@ -10,7 +10,7 @@ description: How to update your code to use the new interface for `qiskit.algori
 
   This guide precedes the introduction of the V2 primitives interface. Following the introduction of the V2 primitives, some providers have deprecated V1 primitive
   implementations in favor of the V2 alternatives. If you are interested in following this guide, we recommend combining it with the
-  [migrate to V2 primitives](./v2-primitives) guide to bring your code to the most updated state.
+  [Migrate to V2 primitives](./v2-primitives) guide to bring your code to the most updated state.
 </Admonition>
 
   In Qiskit 0.44 and later releases, the `qiskit.algorithms` module has been superseded by a new standalone library, `qiskit_algorithms`,
@@ -94,7 +94,7 @@ Once you know which primitive you want to use, choose the primitive implementati
 
 * For running on quantum hardware choose from these options:
 
-   - Access services with native primitive implementations, such as the Qiskit Runtime service by using [`qiskit_ibm_runtime.Sampler`](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Sampler) and [`qiskit_ibm_runtime.Estimator`.](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Estimator)
+   - Access services with native primitive implementations, such as the Qiskit Runtime service, by using [`qiskit_ibm_runtime.Sampler`](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Sampler) and [`qiskit_ibm_runtime.Estimator`.](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Estimator)
    - Wrap any QPU (quantum processing unti) with `Backend` primitives ([`qiskit.primitives.BackendSampler`](/api/qiskit/qiskit.primitives.BackendSampler) and [`qiskit.primitives.BackendEstimator`](/api/qiskit/qiskit.primitives.BackendEstimator)). These wrappers implement a primitive interface on top of a backend that only supports `backend.run()`.
 
 For detailed information and examples, particularly on the use of the `Backend` primitives, refer to
@@ -556,7 +556,7 @@ print(result.eigenvalues)
 **[Updated] Using primitives:**
 
 ```python
-from qiskit_ibm_runtime import SamplerV1 as Sampler, EstimatorV1 as Estimator, QiskitRuntimeService, Session
+from qiskit_ibm_runtime import Sampler, Estimator, QiskitRuntimeService, Session
 from qiskit.algorithms.eigensolvers import VQD
 from qiskit.algorithms.optimizers import SLSQP
 from qiskit.algorithms.state_fidelities import ComputeUncompute
