--- a/docs/migration-guides/qiskit-quantum-instance.mdx
+++ b/docs/migration-guides/qiskit-quantum-instance.mdx
@@ -11,7 +11,7 @@ description: Stop using the deprecated Qiskit `QuantumInstance` class
   This guide precedes the introduction of the V2 primitives interface. It was created to guide users from `QuantumInstance` to
   the V1 primitives interface. Following the introduction of the V2 primitives, some providers have deprecated V1 primitive
   implementations in favor of the V2 alternatives. If you are interested in following this guide, we recommend combining it with the
-  [migrate to V2 primitives] guide to bring your code to the most updated state.
+  [Migrate to V2 primitives](./v2-primitives) guide to bring your code to the most updated state.
 </Admonition>
 
 The [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance) is a utility class that allows the joint
@@ -55,7 +55,7 @@ The remainder of this guide focused on the [`qiskit.utils.QuantumInstance.execut
   - *Primitives* - Any Sampler or Estimator implementation using base classes [`qiskit.primitives.BackendSampler`](/api/qiskit/qiskit.primitives.BackendSampler) and a [`qiskit.primitives.BackendEstimator`](/api/qiskit/qiskit.primitives.BackendEstimator).
   - *Reference primitives* -  [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler) and [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) are reference implementations that come with Qiskit.
   - *Aer primitives* - The [Aer](https://qiskit.org/ecosystem/aer) primitive implementations [`qiskit_aer.primitives.Sampler`](https://qiskit.org/ecosystem/aer/stubs/qiskit_aer.primitives.Sampler.html) and [`qiskit_aer.primitives.Estimator`](https://qiskit.org/ecosystem/aer/stubs/qiskit_aer.primitives.Estimator.html).
-  - *Qiskit Runtime primitives* - The Qiskit Runtime primitive implementations [`qiskit_ibm_runtime.Sampler`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler) and [`qiskit_ibm_runtime.Estimator`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator).
+  - *Qiskit Runtime primitives* - The Qiskit Runtime primitive implementations [`qiskit_ibm_runtime.Sampler`](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Sampler) and [`qiskit_ibm_runtime.Estimator`](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Estimator).
   - *`Backend` primitives* - Instances of [`qiskit.primitives.BackendSampler`](/api/qiskit/qiskit.primitives.BackendSampler) and [`qiskit.primitives.BackendEstimator`](/api/qiskit/qiskit.primitives.BackendEstimator). These allow any processor to implement primitive interfaces.
 
 </Admonition>
