--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -415,7 +415,7 @@
     "\n",
     "result = StatevectorSampler().run([circuit]).result()\n",
     "\n",
-    "print(f'Count data:\\n {result[0].data.c0.get_int_counts()}')\n"
+    "print(f'Count data:\\n {result[0].data.c0.get_int_counts()}')"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3"
   },
   "title": "Circuit library"
  },
