Add PEA to error techniques topic (#1777)
Will get more information from @samantha Barron, but I'm adding some
information here as a placeholder.

---------

Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>
Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Samuele Ferracin <sam.ferracin@ibm.com>

--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -171,6 +171,7 @@
     "tags": []
    },
    "source": [
+    "<span id=\"zne\"></span>\n",
     "## Zero-noise extrapolation (ZNE)\n",
     "\n",
     "Zero-noise extrapolation (ZNE) is a technique for mitigating errors in estimating expectation values of observables. While it often improves results, it is not guaranteed to produce an unbiased result.\n",
@@ -209,9 +210,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5dcab7b",
+   "metadata": {},
+   "source": [
+    "## Probabilistic Error Amplification (PEA)\n",
+    "\n",
+    "One of the main challenges in ZNE is to accurately amplify the noise affecting the target circuit. Gate folding provides an easy way to perform this amplification, but is potentially inaccurate and might lead to incorrect results.  See the article [\"Scalable error mitigation for noisy quantum circuits produces competitive expectation values\"](https://www.nature.com/articles/s41567-022-01914-3), and specifically page 4 of the [supplementary material](https://arxiv.org/pdf/2108.09197) for details.\n",
+    "\n",
+    "PEA is a more sophisticated technique that performs preliminary experiments to reconstruct the noise and then uses this information to perform an accurate amplification. For utility-scale experiments, it is often the best choice.\n",
+    "\n",
+    "Because PEA is a ZNE noise amplification technique, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other `resilience.zne` options can be used in addition to set extrapolators, amplification levels, and so on. PEA requires a noise model, which is automatically generated when using primitives.\n",
+    "\n",
+    "The following snippet provides an example where PEA is used to mitigate the result of an Estimator job:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4947f442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator = Estimator(mode=backend)\n",
+    "estimator.options.resilience.zne_mitigation = True\n",
+    "estimator.options.resilience.zne.amplifier = \"pea\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fcc40cb7-45b7-4248-84c4-aa7f26ba50ff",
    "metadata": {},
    "source": [
+    "<span id=\"pec\"></span>\n",
     "## Probabilistic error cancellation (PEC)\n",
     "\n",
     "Probabilistic error cancellation (PEC) is a technique for mitigating errors in estimating expectation values of observables. Unlike ZNE, it returns an unbiased estimate of the expectation value. However, it generally incurs a greater overhead.\n",
